# grust

./: Cargo.toml
splinter/: Cargo.toml
splinter/examples/: bezier.rs  toy.rs
splinter/src/: cubic.rs  lib.rs  linear.rs  quadratic.rs
splinter/src/bezier/: cubic.rs  linear.rs  mod.rs  quadratic.rs
